# pysisyphus

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lgtm.yml  AnimPlot.py  Citation.cff  Geometry.py  MANIFEST.in  README.md  ReferenceNEB.py  TODO  architecture.md  codecov.yml  config.ini.bare  config.py  constants.py  default.nix  doc-requirements.txt  flake.nix  flake8.ini  nixpkgs.nix  plot_opt.py  pyproject.toml  pyrightconfig.json  pysisyphus.nix  pysisyphus_presentation.ipynb  readthedocs.yml  run.py  run.sh  setup.cfg  setup.py  showneb.py  test-requirements.txt
calculators/: AnaPot.py  AnaPot2.py  AnaPot2D.py  AnaPot3.py  AnaPotBase.py  Calculator.py  IDPP.py  MullerBrownPot.py  ORCA.py  XTB.py
cos/: ChainOfStates.py  NEB.py  Neb.py  NoSpringNeb.py  SimpleZTS.py
deprecated/: NoSpringNeb.py  ONIOM.py  plot.py
docs/: Makefile  calculators.rst  chainofstates.rst  conf.py  coordinate_systems.rst  diabatization.rst  es_optimization.rst  examples.rst  index.rst  installation.rst  irc.rst  make.bat  marcusdim.rst  microiterations.rst  min_optimization.rst  nix.rst  optimizers.rst  overview.rst  plotting.rst  pysistrj.rst  pysisyphus.rst  scans.rst  tsoptimization.rst  worked_example.rst
irc/: DampedVelocityVerlet.py  Euler.py  GSTest.py  GonzalesSchlegel.py  IMKMod.py  IRC.py  ParamPlot.py
nix/: bundle.sh  container.nix  default.nix  hydra.nix  nixpkgs.nix  overlay.nix  pkgs.nix  pysisyphus.nix  release.nix  shell.nix  sources.json
optimizer/: linesearch.py  steepest_descent.py
optimizers/: BFGS.py  BacktrackingOptimizer.py  ConjugateGradient.py  FIRE.py  NaiveSteepestDescent.py  Optimizer.py  SteepestDescent.py
pysisyphus/: AnimPlot.py  Geometry.py  InternalCoordinates.py  MOCoeffs.py  TableFormatter.py  TablePrinter.py  __init__.py  _version.py  benchmark_sets.py  color.py  config.py  constants.py  elem_data.py  exceptions.py  executors.py  filtertrj.py  finite_diffs.py  helpers.py  helpers_pure.py  hessian_proj.py  init_logging.py  linalg.py  linalg_affine3.py  masses.py  pack.py  peakdetect.py  plot.py  plot_ascii.py  plot_helpers.py  run.py  socket_helper.py  testing.py  thermo.py  timing.py  trj.py  typing.py  xyzloader.py  yaml_mods.py
resources/: logo_new_cut.xcf  logo_new_cut_small.xcf
scripts/: aciddrain.py  atomhess.py  batchnt.py  batchnt_multi.py  couplings.py  crest_gnts.py  fbdia.py  frag.py  gen_m2m.py  modes3d.py  molcas_scan.py  orca2cdd.py  orca2pysis.py  orca_ctnums.py  orca_overlaps.py  overlaps.py  pysis_validate_md.py  pysissoc.py  rotvecs.py  tddispl.py
test_coord_sys/: test_coord_sys.py
tests/: anapot.py  ase_ethan.py  conftest.py  fixtures.py  h2o.py  h2o_inv_educt.xyz  h2o_inv_middle.xyz  h2o_neb_opt.py  mullerbrownpot.py  pytest.ini  test_anapot.py  test_anapot3.py  test_bfgs.py  test_ethan_opt.py  test_mullerbrownpot.py  test_orca_ethan.py  test_procrustes.py
tests_staging/: ase_ethan.py  h2o.py  test_anapot3.py  test_mullerbrownpot.py  test_orca_ethan.py  test_orca_hcn.py  test_run_tsopt_from_cos.py
xyz_files/: 01_opt_aus_04_b3lyp_scan_min.xyz  01_run6fbpb_photoprod_guess.xyz  08_allene.xyz  acetaldehyd.xyz  acetaldehyd_oniom_opt.xyz  ar14cluster.xyz  azetidine_xtbopt.xyz  bare_solvated.xyz  benzene_and_chlorine.xyz  benzene_pm6_opt.xyz  benzene_shaken.xyz  butadiene_hf_sto3g.xyz  c4_lb_test_02.xyz  codein.xyz  diels_alder_interpolated.trj  dieniminium_cation_s1_opt.xyz  dihedral_gen_test.cjson  fe_opt.xyz  fe_opt_cart.xyz  h2.xyz  h2o2_guess_bad.xyz  h2o2_rot2.xyz  h2o_bp86_def2svp_opt.xyz  hcn_iso_hf_sto3g_ts_opt.xyz  hcn_iso_ts_opt_xtb.xyz  hcn_ts_hf_321g.xyz  hfabstraction_ts_opt_xtb.xyz  (+12 more)
(+1933 files in other folders)
