[build-system]
requires = ["setuptools>=80", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "pysisyphus/version.py"

[tool.ruff]

[tool.ruff.lint]
# E741: ambiguous variable name
ignore = ["E741"]
extend-select = ["NPY201"]
preview = true
