[tool.setuptools_scm]
write_to = "pysisyphus/version.py"

[metadata]
name = pysisyphus
description = Python suite for exploring potential energy surfaces.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eljost/pysisyphus
maintainer = Johannes Steinmetzer
maintainer_email = johannes.steinmetzer@uni-jena.de
license = GNU General Public License v3 (GPLv3)
platform = unix
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    autograd
    dask
    distributed
    h5py
    fabric
    jinja2
    joblib
    matplotlib
    numpy
    natsort
    networkx
    psutil
    pyyaml
    rmsd
    scipy
    sympy
    scikit-learn

[options.extras_require]
test = pyscf; pytest; pytest-cov; ase; qcengine
doc = sphinx; sphinx-rtd-theme ; sphinx_autodoc_typehints

[options.entry_points]
console_scripts =
    pysis = pysisyphus.run:run
    pysisplot = pysisyphus.plot:run
    pysistrj = pysisyphus.trj:run
    pysisdia = pysisyphus.drivers.diabatization:run
    pysisfilter = pysisyphus.filtertrj:run
    pysispack = pysisyphus.pack:run
    pysisthermo = pysisyphus.drivers.thermo:run_thermo
    pysismerge = pysisyphus.drivers.merge:run_merge
    pysisreplace = pysisyphus.drivers.replace:run
    pysisrc = pysisyphus.config:run_detect_paths
