[tool.setuptools_scm]
write_to = "pysisyphus/version.py"

[metadata]
name = pysisyphus
description = Python suite for exploring potential energy surfaces.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eljost/pysisyphus
maintainer = Johannes Steinmetzer
maintainer_email = johannes.steinmetzer@uni-jena.de
license = GNU General Public License v3 (GPLv3)
platform = unix
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    autograd
    dask
    distributed
    h5py
    fabric
    jax
    jinja2
    matplotlib
    natsort
    numba
    numpy
    networkx
    optuna
    pandas
    psutil
    pyyaml
    rmsd
    scipy
    sympy
    scikit-learn

[options.extras_require]
test = pyscf; pytest; pytest-cov; ase>=3.23.0; qcengine
full = pyscf; pytest; pytest-cov; ase>=3.23.0; qcengine; ursina; trexio
# sphinx 8.2.0 is incompatible w/ sphinx_autodoc_typehints as of 02/19/2025.
# See https://github.com/tox-dev/sphinx-autodoc-typehints/issues/523
doc = sphinx<=8.2.0; sphinx-rtd-theme ; sphinx_autodoc_typehints

[options.entry_points]
console_scripts =
    pysis = pysisyphus.run:run
    pysisplot = pysisyphus.plot:run
    pysistrj = pysisyphus.trj:run
    pysisdia = pysisyphus.diabatization.driver_yaml:run
    pysisfilter = pysisyphus.filtertrj:run
    pysispack = pysisyphus.pack:run
    pysisthermo = pysisyphus.drivers.thermo:run_thermo
    pysismerge = pysisyphus.drivers.merge:run_merge
    pysisreplace = pysisyphus.drivers.replace:run
    pysisrc = pysisyphus.config:run_detect_paths
    pysiswigner = pysisyphus.dynamics.wigner:run
